Done upload and delete avatar
